tests/expectations/compiler/function/transition_function_calls_transition_function_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:6:19
     |
   6 |            return adder(a, b);
     |                   ^^^^^^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:8:20
     |
   8 |             return subber(a, b);
     |                    ^^^^^^^^^^^^
"""]
